--- a/openvfd.service
+++ b/openvfd.service
@@ -4,9 +4,9 @@ Wants=network-online.target
 
 [Service]
 Type=simple
-Environment="OPTS=-12h"
-ExecStartPre=/bin/sh -c ". /linux_openvfd/vfd.conf; /sbin/modprobe openvfd vfd_gpio_clk=$vfd_gpio_clk vfd_gpio_dat=$vfd_gpio_dat vfd_gpio_stb=$vfd_gpio_stb vfd_gpio_chip_name=$vfd_gpio_chip_name vfd_chars=$vfd_chars vfd_dot_bits=$vfd_dot_bits vfd_display_type=$vfd_display_type;"
-ExecStart=/linux_openvfd/OpenVFDService $OPTS &
+Environment="OPTS=-24h"
+ExecStartPre=/bin/sh -c ". /H616-T95-open-vfd/vfd.conf; /sbin/modprobe openvfd vfd_gpio_clk=$vfd_gpio_clk vfd_gpio_dat=$vfd_gpio_dat vfd_gpio_stb=$vfd_gpio_stb vfd_gpio_chip_name=$vfd_gpio_chip_name vfd_chars=$vfd_chars vfd_dot_bits=$vfd_dot_bits vfd_display_type=$vfd_display_type;"
+ExecStart=/H616-T95-open-vfd/OpenVFDService $OPTS &
 ExecStop=/usr/bin/killall OpenVFDService
 ExecStopPost=-/sbin/rmmod openvfd
 
